# world-population-migration-cnn

./: CMakeLists.txt  README.md  build.sh
src/: main.cpp
src/data/: dataset.cpp  dataset.hpp
src/models/: neural_network.cpp  neural_network.hpp
